# MemoryZeroBenchmark

./: CMakeLists.txt  main.cpp
jni/: Android.mk  Application.mk
