cmake_minimum_required(VERSION 2.8)

project(MemoryZeroBenchmark)
set(CMAKE_CXX_STANDARD 17)
if(CMAKE_CXX_COMPILER_ID EQUAL "MSVC")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /arch:SSE /arch:SSE2 /arch:AVX /arch:AVX2")
    message(STATUS "Visual C++ compiler detected")
else()
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -msse -msse2 -mavx -mavx2")
    message(STATUS "GCC-like compiler detected")
endif()
add_executable(${PROJECT_NAME} "main.cpp")
